--- a/css/style.css
+++ b/css/style.css
@@ -12093,7 +12093,7 @@ h1.h2.title {
 	}
 	.slick-prev, .slick-next{
 		height: 70px;
-		background: #fff;
+		background: transparent;
 	}
 	.slick-prev:before, .slick-next:before{
 		line-height: .3;
@@ -14286,6 +14286,9 @@ header .minicart-title {
 	}
 }
 /*** /Resposnsive ***/
+.slider-for-Product .slick-prev:before, .slider-for-Product .slick-next:before{
+	color: #333
+}
 .no-scroll-popups{
 	overflow: hidden;
 }
@@ -14364,6 +14367,9 @@ header .minicart-title {
 	.header-title{
 		font-size: 16px;
 	}
+	.zoomContainer{
+		display: none;
+	}
 }
 @media(max-width: 480px){
 	.pragraph-login {		
@@ -14420,4 +14426,17 @@ header .minicart-title {
     font-size: 14px;
     letter-spacing: 0;
     border-radius: 35px;
+}
+.title-cate{
+	padding: 15px 0 0 0;
+    color: #b3b3b3;
+    text-transform: capitalize;
+}
+/** Common **/
+.header-nav{
+	background-color: #fff;
+}
+.breadcrumb{
+	padding: 10px 0;
+    margin: 0;
 }
